Added static folders to be served and integrated them in app.
Signed-off-by: Victor Gabriel <costinv92@gmail.com>

--- a/views/home.html
+++ b/views/home.html
@@ -6,21 +6,21 @@
 	<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>	
-	<link rel="stylesheet" type="text/css" href="../public/stylesheet/style.css">
-	<script type="text/javascript" src="../public/scripts/functionality.js"></script>
+	<link rel="stylesheet" type="text/css" href="/stylesheet/style.css">
+	<script type="text/javascript" src="/scripts/functionality.js"></script>
 </head>
 <body>
-	<link href='../node_modules/bootstrap/dist/css/bootstrap.min.css' rel='stylesheet' />
-	<script src="../node_modules/jquery/dist/jquery.min.js"></script>
-	<script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-	<link href='../node_modules/tether/dist/css/tether.min.css' rel='stylesheet' />
-	<script src="../node_modules/tether/dist/js/tether.min.js"></script>
+	<link href='bootcss/bootstrap.min.css' rel='stylesheet' />
+	<script src="bootjs/bootstrap.min.js"></script>
+	<script src="jqjs/jquery.min.js"></script>
+	<link href='tetcss/tether.min.css' rel='stylesheet' />
+	<script src="tetjs/tether.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<script type="text/javascript" src=https://cdnjs.cloudflare.com/ajax/libs/maphilight/1.3.1/jquery.maphilight.min.js></script>
 	<!-- <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet"> -->
 	<div id="mainDiv">
 		<div id="bottom">
-			<a href="home.html"><img class="pull-left" id="logo" src="../public/stylesheet/Imgs/logo.jpg"/></a>
+			<a href="home.html"><img class="pull-left" id="logo" src="/stylesheet/Imgs/logo.jpg"/></a>
 			<a href="#myPopup" data-rel="popup"><span class="pull-right" id="login">Autentificare</span></a>
 		</div>
 		<div class="container" id="harta">
@@ -46,7 +46,7 @@
 				</ul>
 			</div>
 			<div class="offset-1 col-10 offset-1">
-				<img src="../public/stylesheet/Imgs/space.jpg" id="harta">
+				<img src="/stylesheet/Imgs/space.jpg" id="harta">
 				<!-- <map name="nihon">
 				    <area id="test3" href="http://www.tokyo.com" shape="poly" coords="5000,500 100,100 2000,3211 5000,500" alt="tests" title="testerhi">
 				</map> -->
