Resolv redirect bug in home.html
Signed-off-by: Victor Gabriel <costinv92@gmail.com>

--- a/views/home.html
+++ b/views/home.html
@@ -20,7 +20,7 @@
 	<!-- <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet"> -->
 	<div id="mainDiv">
 		<div id="bottom">
-			<a href="home.html"><img class="pull-left" id="logo" src="/stylesheet/Imgs/logo.jpg"/></a>
+			<a href="/"><img class="pull-left" id="logo" src="/stylesheet/Imgs/logo.jpg"/></a>
 			<a href="#myPopup" data-rel="popup"><span class="pull-right" id="login">Autentificare</span></a>
 		</div>
 		<div class="container" id="harta">
