--- a/views/home.html
+++ b/views/home.html
@@ -8,35 +8,32 @@
 	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>	
 	<link rel="stylesheet" type="text/css" href="/stylesheet/style.css">
 	<script type="text/javascript" src="/scripts/functionality.js"></script>
+	<script type="text/javascript" src="/scripts/mapResize.js"></script>
 </head>
 <body>
 	<link href='bootcss/bootstrap.min.css' rel='stylesheet' />
 	<script src="bootjs/bootstrap.min.js"></script>
-	<script src="jqjs/jquery.min.js"></script>
-	<link href='tetcss/tether.min.css' rel='stylesheet' />
-	<script src="tetjs/tether.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-	<script type="text/javascript" src=https://cdnjs.cloudflare.com/ajax/libs/maphilight/1.3.1/jquery.maphilight.min.js></script>
-	<!-- <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet"> -->
+	<script type="text/javascript" src="http://davidlynch.org/projects/maphilight/jquery.maphilight.js"></script>
 	<div id="mainDiv">
-		<div id="bottom">
+		<div class="bottom col-xs-12">
 			<a href="/"><img class="pull-left" id="logo" src="/stylesheet/Imgs/logo.jpg"/></a>
 			<a href="#myPopup" data-rel="popup"><span class="pull-right" id="login">Autentificare</span></a>
 		</div>
-		<div class="container" id="harta">
+		<div class="container">
 		<!-- Main Dropdown Menu -->
-			<div class="dropdown">
-				<button class="btn btn-default no-pad" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" style="width:3%;">
+			<div class="dropdown" style="width: 3%;">
+				<button class="btn btn-default no-pad" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" >
 				    <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
 				</button>
-				<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-				    <li  id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-				    	<a href="#">Categorie</a>
+				<ul class="dropdown-menu" aria-labelledby="dropdownMenu1" id="main-menu">
+				    <li  id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" onclick="open_menu()">
+				    	<a href="#">Categori</a>
 				    </li>
 				    <!-- Categories Dropdown Menu -->
-				    <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-				    	<li><a href="#">Drumuri</a></li>
-				    	<li><a href="#">Scoli</a></li>
+				    <ul id="dropdownMenu3" class="dropdown-menu" aria-labelledby="dropdownMenu1">
+				    	<li><a href="#" onclick="filter_by_category('DR')">Drumuri</a></li>
+				    	<li><a href="#" onclick="filter_by_category('SC')">Scoli</a></li>
 				    </ul>
 				    <li role="separator" class="divider"></li>
 				    <li><a href="#">Votarile mele</a></li>
@@ -44,12 +41,14 @@
 				    <li role="separator" class="divider"></li>
 				    <li><a href="#">Creare cont</a></li>
 				</ul>
-			</div>
-			<div class="offset-1 col-10 offset-1">
-				<img src="/stylesheet/Imgs/space.jpg" id="harta">
-				<!-- <map name="nihon">
-				    <area id="test3" href="http://www.tokyo.com" shape="poly" coords="5000,500 100,100 2000,3211 5000,500" alt="tests" title="testerhi">
-				</map> -->
+			</div>	
+			<div class="row">		
+				<div class="col-xs-offset-1 col-xs-10 col-xs-offset-1">
+					<img src="/stylesheet/Imgs/harta.jpg" id="harta" usemap="#harta">
+					<map name="harta" id="mapHiLight">
+					    <area id="BH" href="pollsList.html" shape="circle" coords="220,210,44" alt="bihor" title="Bihor"> <!-- onclick="filter_by_county('BH')"> -->
+					</map>
+				</div>
 			</div>
 		</div>
 		<div class="footer"></div>
