--- a/views/pollsList.html
+++ b/views/pollsList.html
@@ -17,8 +17,7 @@
 	<script type="text/javascript" src="http://davidlynch.org/projects/maphilight/jquery.maphilight.js"></script>
 	<div id="pollsDiv">
 		<div class="bottom col-xs-12">
-			<a href="/"><img class="pull-left" id="logo" src="/stylesheet/Imgs/logo.jpg"/></a>
-			<a href="#myPopup" data-rel="popup"><span class="pull-right" id="login">Autentificare</span></a>
+			<a href="/"><img class="pull-left" id="logo" src="/stylesheet/Imgs/logo.jpg"/></a>	
 		</div>
 		<div class="container">
 			<div class="dropdown" style="width: 3%;">
@@ -26,22 +25,20 @@
 				    <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
 				</button>
 				<ul class="dropdown-menu" aria-labelledby="dropdownMenu1" id="main-menu">
-				    <li  id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" onclick="open_menu()">
-				    	<a href="#">Categori</a>
-				    </li>
-				    <!-- Categories Dropdown Menu -->
-				    <ul id="dropdownMenu3" class="dropdown-menu" aria-labelledby="dropdownMenu1">
-				    	<li><a href="#" onclick="filter_by_category('DR')">Drumuri</a></li>
-				    	<li><a href="#" onclick="filter_by_category('SC')">Scoli</a></li>
-				    </ul>
+				    <li><a href="#myPopup" data-rel="popup">Autentificare</a></li>
 				    <li role="separator" class="divider"></li>
 				    <li><a href="#">Votarile mele</a></li>
-				    <li><a href="#">Adauga votare</a></li>
+				    <li><a href="/addPoll">Adauga votare</a></li>
 				    <li role="separator" class="divider"></li>
 				    <li><a href="#">Creare cont</a></li>
 				</ul>
 			</div>
+			<div>
+				<span>CATEGORI:</span>
+				<input type="checkbox" name=""> 
+			</div>
 			<div id="poll-list" class="col-xs-offset-1 col-xs-10 col-xs-offset-1">
+
 			Lista POLL-uri filtrate incarcate dinamic
 			</div>
 			<!-- Login POPUP -->
