Added Filter by category

--- a/views/home.html
+++ b/views/home.html
@@ -37,8 +37,8 @@
 			<div class="row">		
 				<div class="col-xs-offset-1 col-xs-10 col-xs-offset-1">
 					<img src="/stylesheet/Imgs/harta.jpg" id="harta" usemap="#harta">
-					<map name="harta" id="mapHiLight">
-					    <area id="BH" href="/pollsList" shape="circle" coords="220,210,44" alt="bihor" title="Bihor">
+					<map name="harta">
+					    <area id="BH" href="/pollsList" shape="circle" coords="220,210,44" alt="bihor" title="Bihor" onclick="filter_by_county(id)">
 					</map>
 				</div>
 			</div>
