--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -27,6 +27,10 @@
 	-webkit-text-security: none;
 }
 /*Menu*/
+#menu1 a{
+	color: black;
+	text-decoration: none;
+}
 #menu2 {
 	margin-left: 160px;
 }
@@ -49,12 +53,30 @@ area:hover {
 #poll-list {
 	background: black;
 }
+#poll-list a {
+	text-decoration: none !important;
+	color: white !important;
+}
 
 #pollsDiv {
 	background: black;
 	color: white;
 }
-
+.category-filter {
+	margin-top: 30px;
+}
+.category-filter input{
+	width: 15px;
+	margin-top: 0px !important;
+}
+.category-filter label {
+	margin-left: 25px;
+	font-size: 15px
+}
+#applyBtn {
+	width: 50%;
+	margin-bottom: 10px;
+}
 /*other classes*/
 .pull-right {
 	float: right;
